--- a/Emotion.AutomationMechanism/Emotion.AutomationMechanism.csproj
+++ b/Emotion.AutomationMechanism/Emotion.AutomationMechanism.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>ema</AssemblyName>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
