[Benchmark] Added benchmarks for image loading

--- a/Emotion.Benchmark/Emotion.Benchmark.csproj
+++ b/Emotion.Benchmark/Emotion.Benchmark.csproj
@@ -30,7 +30,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Assets\" />
+    <None Update="Assets\camproom.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
