--- a/Emotion.AutomationMechanism/Emotion.AutomationMechanism.csproj
+++ b/Emotion.AutomationMechanism/Emotion.AutomationMechanism.csproj
@@ -18,6 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Scripts\BuildAssets.cs" />
     <Compile Remove="Scripts\CreateProject.cs" />
     <Compile Remove="Scripts\CreateProjectAssets\GlobalImports.cs" />
     <Compile Remove="Scripts\TestRenderScript.cs" />
@@ -25,6 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Scripts\BuildAssets.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Scripts\CreateProject.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -42,12 +46,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Emotion\Emotion.csproj" />
 	<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.9.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Scripts\BuildAssets.cs">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
   </ItemGroup>
 
   <ItemGroup>
