--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -139,6 +139,8 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Assets\Shaders\BlitPremultAlpha.frag" />
+    <None Remove="Assets\Shaders\BlitPremultAlpha.xml" />
     <None Remove="Assets\Shaders\GLESSupport.c" />
   </ItemGroup>
   <ItemGroup>
