--- a/Emotion.Droid/Emotion.Droid.csproj
+++ b/Emotion.Droid/Emotion.Droid.csproj
@@ -5,7 +5,21 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+        <Configurations>Debug;Release</Configurations>
+        <Platforms>Android</Platforms>
+        <PlatformTarget>AnyCPU</PlatformTarget>
     </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)'=='Debug'">
+        <DebugType>full</DebugType>
+        <DebugSymbols>true</DebugSymbols>
+        <DocumentationFile />
+        <Optimize>false</Optimize>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)'=='Release'">
+        <Optimize>True</Optimize>
+    </PropertyGroup>
+
     <ItemGroup>
         <ProjectReference Include="..\Emotion\Emotion.csproj" />
     </ItemGroup>
