--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -1,39 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
-        <Configurations>Debug;Release;DebugUnix64</Configurations>
+        <Configurations>Debug;Release</Configurations>
         <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-        <Platforms>x86;x64</Platforms>
+        <Platforms>Default</Platforms>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-      <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-      <DefineConstants>$(DefineConstants);THROW_EXCEPTIONS;AUTOBUILD</DefineConstants>
+    <PropertyGroup Condition="'$(Configuration)'=='Debug'">
+        <DebugType>full</DebugType>
+        <DebugSymbols>true</DebugSymbols>
+        <DocumentationFile />
+        <Optimize>false</Optimize>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)'=='Release'">
+        <Optimize>True</Optimize>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
-      <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-      <DefineConstants>$(DefineConstants);THROW_EXCEPTIONS;AUTOBUILD</DefineConstants>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-      <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-      <DefineConstants>$(DefineConstants);THROW_EXCEPTIONS;AUTOBUILD</DefineConstants>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
-      <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-      <DefineConstants>$(DefineConstants);THROW_EXCEPTIONS;AUTOBUILD</DefineConstants>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugUnix64|x64'">
-      <DefineConstants>$(DefineConstants);THROW_EXCEPTIONS;AUTOBUILD</DefineConstants>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugUnix64|x86'">
-      <DefineConstants>$(DefineConstants);THROW_EXCEPTIONS;AUTOBUILD</DefineConstants>
+    <PropertyGroup Condition="'$(Platform)'=='Default'">
+        <PlatformTarget>AnyCPU</PlatformTarget>
+        <DefineConstants>$(DefineConstants);THROW_EXCEPTIONS;AUTOBUILD</DefineConstants>
     </PropertyGroup>
 
     <ItemGroup>
@@ -77,7 +64,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Emotion.Test\Emotion.Test.csproj" />
+        <ProjectReference Include="..\Emotion\Emotion.csproj" />
+        <ProjectReference Include="..\Legacy\Emotion.Test\Emotion.Test.csproj" />
     </ItemGroup>
 
     <ItemGroup>
