--- a/.github/workflows/buildMacOS.yml
+++ b/.github/workflows/buildMacOS.yml
@@ -1,26 +1,27 @@
-name: CI-MacOS
-
-on: [push]
-
-jobs:
-  build-n-run-tests:
-
-    runs-on: macos-latest
-    
-    steps:
-    - uses: actions/checkout@master
-    - name: Build Everything
-      run: |
-        dotnet --info
-        dotnet publish Emotion.ExecTest -c DebugUnix64 -r osx-x64 --self-contained true
-    #- name: Run Tests
-    #  run: |
-    #    cd ./Tests/bin/osx64
-    #    ls .
-    #    ./Tests
-    #- name: Upload Test Artifact
-    #  if: always()
-    #  uses: actions/upload-artifact@master
-    #  with:
-    #    name: Test Result Artifact
-    #    path: Tests/bin/osx64/TestResults
+# name: CI-MacOS
+# 
+# on: [push]
+# 
+# jobs:
+#   build-n-run-tests:
+# 
+#     runs-on: macos-latest
+#     
+#     steps:
+#     - uses: actions/checkout@master
+#     - name: Build Everything
+#       run: |
+#         dotnet --info
+#     #    dotnet publish Emotion.ExecTest -c DebugUnix64 -r osx-x64 --self-contained true
+#     #- name: Run Tests
+#     #  run: |
+#     #    cd ./Tests/bin/osx64
+#     #    ls .
+#     #    ./Tests
+#     #- name: Upload Test Artifact
+#     #  if: always()
+#     #  uses: actions/upload-artifact@master
+#     #  with:
+#     #    name: Test Result Artifact
+#     #    path: Tests/bin/osx64/TestResults
+# 
