[ONE] Source generation for reflection, marked Emotion as trimmable and AOT compatible

--- a/Emotion.SourceGeneration/Properties/launchSettings.json
+++ b/Emotion.SourceGeneration/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "Profile 1": {
+    "DebugSourceGen": {
       "commandName": "DebugRoslynComponent",
-      "targetProject": "..\\Emotion.SourceGen\\Emotion.SourceGen.csproj"
+      "targetProject": "..\\Emotion.ExecTest\\Emotion.ExecTest.csproj"
     }
   }
 }
