--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -15,7 +15,7 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <NoWarn>1701;1702;1591;1734</NoWarn>
         <Configurations>Debug;Release;Autobuild</Configurations>
-        <Platforms>Win64;Win64NoDepend;Win32;Linux64;MacOS64;Android;Web</Platforms>
+        <Platforms>Win64;Win64NoDepend;Win32;Linux64;MacOS64;Android;Web;Other</Platforms>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)'=='Debug'">
@@ -78,6 +78,11 @@
 
     <!-- Android -->
     <PropertyGroup Condition="'$(Platform)'=='Android'">
+        <PlatformTarget>AnyCPU</PlatformTarget>
+    </PropertyGroup>
+    
+    <!-- Generic AnyCPU, no native libraries -->
+    <PropertyGroup Condition="'$(Platform)'=='Other'">
         <PlatformTarget>AnyCPU</PlatformTarget>
     </PropertyGroup>
     
