--- a/Emotion.ExecTest/Emotion.ExecTest.csproj
+++ b/Emotion.ExecTest/Emotion.ExecTest.csproj
@@ -47,17 +47,37 @@
       <None Include="Examples\RopeSim.cs" />
       <None Include="Examples\TextRenderers.cs" />
     </ItemGroup>
-    
-    <ItemGroup>
-        <Folder Include="Assets\" />
-    </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Emotion\Emotion.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <None Update="Assets\Test\proto\enemy.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Assets\Test\proto\enemy_target.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Assets\Test\proto\enemy_target_current.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Assets\Test\proto\person.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Assets\Test\proto\person_target.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Assets\Test\proto\person_you.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Assets\Test\proto\sword.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
       <None Update="Assets\Test\player.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Assets\Test\proto\thrash.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
