[Legacy] Emotion.Tools compilation fix

--- a/Legacy/Emotion.Plugins.ImGuiNet/Emotion.Plugins.ImGuiNet.csproj
+++ b/Legacy/Emotion.Plugins.ImGuiNet/Emotion.Plugins.ImGuiNet.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Library</OutputType>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -14,7 +14,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Emotion\Emotion.csproj" />
+        <ProjectReference Include="..\..\Emotion\Emotion.csproj" />
     </ItemGroup>
 
     <ItemGroup>
