--- a/Emotion.ExecTest/Emotion.ExecTest.csproj
+++ b/Emotion.ExecTest/Emotion.ExecTest.csproj
@@ -53,6 +53,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Update="Assets\Test\proto\abilities\melee_attack.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
       <None Update="Assets\Test\proto\enemy.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
@@ -77,7 +80,7 @@
       <None Update="Assets\Test\player.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="Assets\Test\proto\thrash.png">
+      <None Update="Assets\Test\proto\abilities\thrash.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
