--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -38,11 +38,6 @@
         <Compile Remove="Assets\Scripts\CustomMainScript.cs" />
         <Compile Remove="Assets\Scripts\MainScript.cs" />
         <Compile Remove="Classes\UITests.cs" />
-        <Compile Remove="EngineTests\CoroutineTest.cs" />
-        <Compile Remove="EngineTests\GlyphSoftwareRasterizerTests.cs" />
-        <Compile Remove="EngineTests\NewUITests.cs" />
-        <Compile Remove="EngineTests\UITests.cs" />
-        <Compile Remove="EngineTests\XMLTests.cs" />
     </ItemGroup>
 
     <ItemGroup>
@@ -68,11 +63,6 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
         <None Include="Classes\UITests.cs" />
-        <None Include="EngineTests\CoroutineTest.cs" />
-        <None Include="EngineTests\GlyphSoftwareRasterizerTests.cs" />
-        <None Include="EngineTests\NewUITests.cs" />
-        <None Include="EngineTests\UITests.cs" />
-        <None Include="EngineTests\XMLTests.cs" />
     </ItemGroup>
 
     <ItemGroup>
@@ -283,6 +273,12 @@
         <None Update="Assets\ReferenceXMLOutput\ComplexValueType().xml">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Assets\ReferenceXMLOutput\ComplexValueTypeWithInheritedMember%28%29.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Assets\ReferenceXMLOutput\ComplexValueTypeWithInheritedMember%28%29_1.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <None Update="Assets\ReferenceXMLOutput\DictionaryWithObjectKeysThatArePrimitiveTypes().xml">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
@@ -394,127 +390,127 @@
         <None Update="Assets\ReferenceRenders\NewUITests\1 Fill%28%29.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\10 WorldEditorTopBar%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\WorldEditorTopBar().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\10 WorldEditorTopBar%28%29_1.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\WorldEditorTopBar()_1.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\10 WorldEditorTopBar%28%29_2.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\WorldEditorTopBar()_2.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\10 WorldEditorTopBar%28%29_3.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\WorldEditorTopBar()_3.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\11 VerticalListWithText%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\VerticalListWithText().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\11 VerticalListWithText%28%29_1.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\VerticalListWithText()_1.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\11 VerticalListWithText%28%29_2.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\VerticalListWithText()_2.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\11 VerticalListWithText%28%29_3.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\VerticalListWithText()_3.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\12 TextWithBackground%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\TextWithBackground().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\13 EditorDropDownRelativeToAndOutsideParent%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\EditorDropDownRelativeToAndOutsideParent().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\14 WorldEditorBottomBar%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\WorldEditorBottomBar().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\15 EditorPanelEmpty%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\EditorPanelEmpty().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\2 FillXAxisWithChild%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillXAxisWithChild().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\3 FillXAxisMinHeight%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillXAxisMinHeight().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\4 FillXAxisMinHeightAndWidth%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillXAxisMinHeightAndWidth().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\5 FillNeitherAxisMinHeightAndWidth%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillNeitherAxisMinHeightAndWidth().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\6 TwoSquaresInFillY%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\TwoSquaresInFillY().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\7 FillList%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillList().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\7 FillList%28%29_1.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillList()_1.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\8 FillListThreeItems%28%29+VerticalList.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListThreeItems()+VerticalList.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\8 FillListThreeItems%28%29+VerticalList_1.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListThreeItems()+VerticalList_1.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\8 FillListThreeItems%28%29+VerticalList_2.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListThreeItems()+VerticalList_2.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\8 FillListThreeItems%28%29+VerticalList_3.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListThreeItems()+VerticalList_3.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\8 FillListThreeItems%28%29+VerticalList_4.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListThreeItems()+VerticalList_4.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\8 FillListThreeItems%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListThreeItems().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\8 FillListThreeItems%28%29_1.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListThreeItems()_1.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\8 FillListThreeItems%28%29_2.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListThreeItems()_2.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\8 FillListThreeItems%28%29_3.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListThreeItems()_3.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\8 FillListThreeItems%28%29_4.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListThreeItems()_4.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\9 FillListFillingItems%28%29+VerticalList.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListFillingItems()+VerticalList.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\9 FillListFillingItems%28%29+VerticalList_1.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListFillingItems()+VerticalList_1.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\9 FillListFillingItems%28%29+VerticalList_2.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListFillingItems()+VerticalList_2.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\9 FillListFillingItems%28%29+VerticalList_3.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListFillingItems()+VerticalList_3.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\9 FillListFillingItems%28%29+VerticalList_4.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListFillingItems()+VerticalList_4.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\9 FillListFillingItems%28%29+VerticalList_5.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListFillingItems()+VerticalList_5.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\9 FillListFillingItems%28%29.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListFillingItems().png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\9 FillListFillingItems%28%29_1.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListFillingItems()_1.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\9 FillListFillingItems%28%29_2.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListFillingItems()_2.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\9 FillListFillingItems%28%29_3.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListFillingItems()_3.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\9 FillListFillingItems%28%29_4.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListFillingItems()_4.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Assets\ReferenceRenders\NewUITests\9 FillListFillingItems%28%29_5.png">
+        <None Update="Assets\ReferenceRenders\NewUITests\FillListFillingItems()_5.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
         <None Update="Assets\Shaders\BrokenShader.xml">
